[gd_scene load_steps=12 format=3 uid="uid://bni6clyp4sg3"]

[ext_resource type="Script" path="res://Objects/RockBarrier/rock_barrier.gd" id="1_y5d42"]
[ext_resource type="PackedScene" uid="uid://cmog2buogarup" path="res://Objects/ItemPickup/item_pickup.tscn" id="2_cojh8"]
[ext_resource type="Resource" uid="uid://bckiex7mctva7" path="res://Resources/Items/drill.tres" id="3_wjd4u"]
[ext_resource type="Texture2D" uid="uid://hoqmxhp5bhdr" path="res://Assets/0x72_16x16RobotTileset.v1.png" id="4_7vpgt"]
[ext_resource type="PackedScene" uid="uid://g0qwgikclavs" path="res://Characters/Player/power_consumer.tscn" id="4_wrui2"]
[ext_resource type="PackedScene" uid="uid://xnd8ne8fypg3" path="res://Components/FloatAwayTextSpawner/float_away_text_spawner.tscn" id="5_j1lly"]
[ext_resource type="PackedScene" uid="uid://cy2f85iqat6q0" path="res://Components/TimeTaskHandler/time_task_handler.tscn" id="7_mnykd"]
[ext_resource type="PackedScene" uid="uid://b0qvmacfrffh2" path="res://Components/PlaceItemInteractable/place_item_interactable.tscn" id="8_ils8e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xx1eq"]
size = Vector2(16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2urmw"]
atlas = ExtResource("4_7vpgt")
region = Rect2(128, 144, 48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kqfg"]
size = Vector2(80, 48)

[node name="RockBarrier" type="Node2D"]
script = ExtResource("1_y5d42")
item_pickup_packed_scene = ExtResource("2_cojh8")
drill_item = ExtResource("3_wjd4u")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(8, 24)
shape = SubResource("RectangleShape2D_xx1eq")

[node name="PowerConsumer" parent="." instance=ExtResource("4_wrui2")]
position = Vector2(8, 24)
consumes_power = 1
active = false

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(16, 0)
rotation = 1.5708
texture = SubResource("AtlasTexture_2urmw")
centered = false

[node name="TimeTaskHandler" parent="." instance=ExtResource("7_mnykd")]
task_time = 3

[node name="FloatAwayTextSpawner" parent="." instance=ExtResource("5_j1lly")]
position = Vector2(32, 16)
text = "Requires Drill"

[node name="PlaceItemInteractable" parent="." instance=ExtResource("8_ils8e")]
accepts_item = ExtResource("3_wjd4u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlaceItemInteractable"]
position = Vector2(8, 24)
shape = SubResource("RectangleShape2D_3kqfg")

[node name="DrillPickupPositionLeft" type="Marker2D" parent="."]
position = Vector2(-16, 32)

[node name="DrillPickupPositionRight" type="Marker2D" parent="."]
position = Vector2(32, 32)

[connection signal="power_requirement_lost" from="PowerConsumer" to="." method="_on_power_consumer_power_requirement_lost"]
[connection signal="power_requirement_met" from="PowerConsumer" to="." method="_on_power_consumer_power_requirement_met"]
[connection signal="task_completed" from="TimeTaskHandler" to="." method="_on_time_task_handler_task_completed"]
[connection signal="insufficient_requirements" from="PlaceItemInteractable" to="." method="_on_place_item_interactable_insufficient_requirements"]
[connection signal="item_picked_up" from="PlaceItemInteractable" to="." method="_on_place_item_interactable_item_picked_up"]
[connection signal="item_placed" from="PlaceItemInteractable" to="." method="_on_place_item_interactable_item_placed"]
